style: fix nav column alignment issues

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -27,6 +27,7 @@
   line-height: 1.25;
   font-weight: 700;
   cursor: pointer;
+  background-color: transparent;
 }
 
 .nav__list_profile {
@@ -72,6 +73,8 @@
   .nav__column {
     align-items: center;
     gap: 12px;
+    flex-direction: column;
+    align-items: start;
   }
 
   .nav__hamburger {
